# C-code-snippets

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
.clangd/index/: FILE.h.0B47AA35880D6C68.idx  __FILE.h.6F8BF1EA128A85A8.idx  __fpos64_t.h.76CFE28F9C6B8241.idx  __fpos_t.h.9C6C7821CAFB6728.idx  __mbstate_t.h.18CD360ACD7D77DA.idx  cdefs.h.8113CACA75BA375E.idx  features.h.839A4F3F7C9A4375.idx  libc-header-start.h.DE4EC70643B7CD1B.idx  long-double.h.4E9A278B5D22A190.idx  main.c.307FC76B63B3C94C.idx  stdarg.h.137798AC662DA31C.idx  stddef.h.6B9340F0CEB1E434.idx  stdio.h.39AA179546A5CA11.idx  stdio_lim.h.8DBF51CB439C85C6.idx  struct_FILE.h.381C91ADEB812BD0.idx  stubs-64.h.2847EFCBD0B50F1C.idx  stubs.h.CDC9CE97F970174E.idx  sys_errlist.h.6636B5F72AD0DBD2.idx  time64.h.F45FA1DA5DF8C4A3.idx  timesize.h.4A370235915877E5.idx  types.h.A3617F8DB832C1C0.idx  (+2 more)
SIGIO/: .gitignore  CMakeLists.txt
async_TCP_multithread/: CMakeLists.txt  compile_commands.json
async_posix_message_queues_SIGEV_THREAD/: CMakeLists.txt
async_posix_message_queues_SIGEV_THREAD/src/: main_server.c
include/: yahtzee.h
linked_list_advanced/: .gitignore
posix_message_queues/: CMakeLists.txt
posix_message_queues/include/: common.h
posix_mutex/: CMakeLists.txt
recursive_function/: CMakeCache.txt
rpi_module/: .module.o.cmd  .our_module.ko.cmd  .our_module.mod.o.cmd  .our_module.o.cmd  Makefile  README.md  module.c  modules.order  our_module.ko  our_module.mod.c
src/: client.c  main.c  main_server.c  yahtzee.c
state_machine/: .gitignore
tty_serial/: CMakeLists.txt
(+106 files in other folders)
